body align fix

--- a/css/global.css
+++ b/css/global.css
@@ -1,3 +1,10 @@
+body {
+    height: auto;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
 /* Color */
 .text-light {
     color: #F6FFFE !important;
