--- a/css/list_ruangan.css
+++ b/css/list_ruangan.css
@@ -1,10 +1,3 @@
-body {
-    height: auto;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-}
-
 .list_pemesanan {
     width: 70%;
 }
